[package]
name = "bt_logger"
version = "0.2.5"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "A simple and lightweight Rust log library with support for log level. Can Generate Log meessage only."
keywords = ["log",  "logger","logging"]
categories = ["development-tools::debugging"]
repository = "https://github.com/bachuetech/bt_logger.git"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_logger"
license = "GPL-3.0-only"

[dependencies]
chrono = "0.4.40"
lazy_static = "1.5.0"

[dev-dependencies]
regex = "1.11.1"

